position fixed for delete marked items, changee visibility of button

--- a/style.css
+++ b/style.css
@@ -174,7 +174,9 @@ select#elementLimit {
   border-radius: 5px;
   color: var(--white);
   background-color: var(--red-900);
-  position: absolute;
+  /* position: absolute; */
+  position: fixed;
+  bottom: 10px;
   left: 50%;
   transform: translateX(-50%);
 }
